--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,17 +17,28 @@
         <th>Text</th>
         <th colspan = "3">Options</th>
       </tr>
- 
-      <% @articles.each do |article| %>
-      <% if article.isactive.nil? %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.text %></td>
-        <td><%= link_to'Edit', edit_article_path(article) %></td>
-        <td><%= link_to'Show', article_path(article) %></td>
-        <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
-      </tr>
-      <% end %>
+      <% if current_user.email != "admin@gmail.com" %>
+        <% @articles.each do |article| %>
+          <% if article.isactive.nil? %>
+            <tr>
+              <td><%= article.title %></td>
+              <td><%= article.text %></td>
+              <td><%= link_to'Edit', edit_article_path(article) %></td>
+              <td><%= link_to'Show', article_path(article) %></td>
+              <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
+            </tr>
+          <% end %>
+        <% end %>
+      <% else %>
+        <% @articles.each do |article| %>
+          <tr>
+            <td><%= article.title %></td>
+            <td><%= article.text %></td>
+            <td><%= link_to'Edit', edit_article_path(article) %></td>
+            <td><%= link_to'Show', article_path(article) %></td>
+            <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
+          </tr>
+        <% end %>
       <% end %>
     </table>
     </center>
