--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,28 +14,31 @@
     <table>
       <tr>
         <th>Title</th>
-        <th>Text</th>
-        <th colspan = "3">Options</th>
+        <th>Author</th>
+      
       </tr>
       <% if current_user.email != "admin@gmail.com" %>
         <% @articles.each do |article| %>
           <% if article.isactive.nil? %>
             <tr>
-              <td><%= article.title %></td>
-              <td><%= article.text %></td>
-              <td><%= link_to'Edit', edit_article_path(article) %></td>
-              <td><%= link_to'Show', article_path(article) %></td>
-              <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
+              <td><div class = "td1"><%=link_to article.title, article_path(article)%></div></td>
+              <td><%= article.user_id %></td>
+              <% if article.user_id == current_user.id %>
+                <td><%= link_to'Edit', edit_article_path(article) %></td>
+                <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
+                <%else%>
+                <td>-</td>
+                <td>-</td>
+              <% end %> 
             </tr>
           <% end %>
         <% end %>
       <% else %>
         <% @articles.each do |article| %>
           <tr>
-            <td><%= article.title %></td>
-            <td><%= article.text %></td>
+            <td><div class = "td1"><%=link_to article.title, article_path(article)%></div></td>
+            <td><%= article.user_id %></td>
             <td><%= link_to'Edit', edit_article_path(article) %></td>
-            <td><%= link_to'Show', article_path(article) %></td>
             <td><%= link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure'} %></td>
           </tr>
         <% end %>
