--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,8 +13,9 @@
 	<body>
 		<div class = "d4">
 			<div class = "link1"><%= link_to 'Home', articles_path%></div>
-			<div class = "link1"><%= link_to'Edit', edit_article_path(@article) %></div>
-			
+      <% if @article.user_id == current_user.id %>
+			   <div class = "link1"><%= link_to'Edit', edit_article_path(@article) %></div>
+			<% end %>
 		</div>
 		<div class = "d1">
 			<p><center>
@@ -53,15 +54,11 @@
 			<h2>Add a comment:</h2>
 			<%= form_for([@article, @article.comments.build]) do |f| %>
 		  		<p>
-		    		<%= f.label :User %><br>
-		    		<%= f.text_field :commenter %>
+		   			<%= f.label :Comment, class: 'text_area' %><br>
+		    		<%= f.text_area :body, class: 'text_area' %>
 		  		</p>
 		  		<p>
-		   			<%= f.label :Comment %><br>
-		    		<%= f.text_area :body %>
-		  		</p>
-		  		<p>
-		    		<%= f.submit %>
+		    		<%= f.submit class: 'submit_btn' %>
 		  		</p>
 			<% end %></center>
 		</div>
