--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,16 +13,16 @@
     <h2>Add New Article</h2>
     <%= form_for :article, url: articles_path do |f| %>
     <% if @article.errors.any? %>
-      <div> id = "error_explanation">
+      <div class = "error">
         <h2>
           <%= pluralize(@article.errors.count, "error")%>
           prohibited this article from being saved
         </h2>
-        <ul>
+        
           <% @article.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
             <% end %>
-        </ul>
+        
       </div>
       <% end %>
 
