--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -33,6 +33,7 @@ a:hover {
 body {
     background-color:black;
     color:white;
+    font-size: 20px;
     }
  
 .p1 {
@@ -56,6 +57,8 @@ body {
 	padding:5px;
 	font-family: times new roman;
 	font-style: italic;
+  font-size: 16px;
+  color : #5FE2F9 ;
 	}
 
   .usr {
