--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -98,6 +98,10 @@ body {
   padding : 5px;
   font-size : 20px;
 }
+.fl {
+  margin : 5px;
+  padding : 5px;
+}
 .divr {
   position: absolute;
   top :10px;
@@ -172,3 +176,6 @@ body {
   color:white;
   margin: 10px;
   }
+.page1 {
+  margin: 20px;
+}
