--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,47 +1,6 @@
-<html>
-<head>
-  <style>
-  body {
-    background-color: black;
-    color:white;
-    font-size: 20px;
-  }
-    </style>
-  </head>
+
   <body><center>
 <h1>Editing article</h1>
- 
-<%= form_for :article, url: article_path(@article), method: :patch do |f| %>
- 
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
- 
-  <p>
-    <%= f.label :title, class: "labels" %><br>
-    <%= f.text_field :title, class: 'input_area' %>
-  </p>
- 
-  <p>
-    <%= f.label :text, class: "labels" %><br>
-    <%= f.text_area :text, class: 'text_area' %>
-  </p>
- 
-  <p>
-    <%= f.submit class: 'submit_btn' %>
-  </p>
- 
-<% end %>
- 
-<%= link_to 'Back', articles_path %>
+ <%= render 'form' %>
+<%= link_to 'Home', articles_path %>
 </center></body>
