--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,35 +1,7 @@
 
   <body><center>
     <h2>Add New Article</h2>
-    <%= form_for :article, url: articles_path do |f| %>
-    <% if @article.errors.any? %>
-      <div class = "error">
-        <h2>
-          <%= pluralize(@article.errors.count, "error")%>
-          prohibited this article from being saved
-        </h2>
-        
-          <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-            <% end %>
-        
-      </div>
-      <% end %>
-
-    <p>
-      <%= f.label :title, class: "labels" %><br>
-      <%= f.text_field :title ,class: "input_area"%>
-    </p>
-   
-    <p>
-      <%= f.label :name,'Content', class: "labels" %><br>
-      <%= f.text_area :text ,class: "text_area" %>
-    </p>
-   
-    <p>
-      <%= f.submit class: 'submit_btn' %>
-    </p>
-  <% end %>
+   <%= render 'form' %>  
   <%= link_to 'Home', articles_path%>
 </center>
 </body>
