--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
         <div class="<%= key %>"><%= value %></div>
       <% end %>
   </center></div>
+<div class = "divr">
+      <% if !(current_user.nil?)%>
+        <p class = "p1, fr"><%= link_to 'Log out', 'users/sign_out', method: :delete %></p>
+        <p class = "p1, fr"><%= current_user.email %></p>
+        <p class = "p2, fl"><%= link_to "Change password", edit_user_registration_path %></p>
+      <% end %>
+    </div> 
 <%= yield %>
 </body>
 </html>
