--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -8,13 +8,14 @@ table,th,td {
     }
 
 .td1 {
-  width: 300px; overflow: hidden;
+overflow: hidden;
 }
     
 th,td {
     padding: 15px;
     font-size: 25px;
     color:white;
+    max-width: 100%;
     }
     
 a:link { 
@@ -34,6 +35,8 @@ body {
     background-color:black;
     color:white;
     font-size: 20px;
+    font-family: droid serif;
+    margin: 10px;
     }
  
 .p1 {
@@ -95,12 +98,13 @@ body {
 .fr {
   float :right;
   margin : 5px;
-  padding : 5px;
-  font-size : 20px;
+  padding : 0px;
+  font-size : 15px;
 }
 .fl {
   margin : 5px;
   padding : 5px;
+  font-size: 15px;
 }
 .divr {
   position: absolute;
@@ -109,7 +113,7 @@ body {
 }
 
 .p2 {
-  font-size : 20px;
+  font-size : 10px;
 }
 
 .submit_btn {
@@ -172,10 +176,19 @@ body {
 }
 
 .d5 {
-  font-size: 24px;
+  font-size: 20px;
   color:white;
   margin: 10px;
   }
 .page1 {
   margin: 20px;
+  padding-left: 40px;
+  padding-right: 0px;
+  background-color: black;
+  width: 350px;
+}
+.pagination a{
+  padding: 0px 5px 0px 5px;
+  text-decoration: none;
+  font-style: normal;
 }
