--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,12 +6,14 @@
 			   <div class = "link1"><%= link_to'Edit', edit_article_path(@article) %></div>
 			<% end %>
 		</div>
-		<div class = "d1">
-			<p><center>
+    <br/>
+		<div class = "d1 row">
+			<div class = "col-sm-12"><p><center>
 	  			<strong>Title:</strong>
 	  			<%= @article.title %>
 			</center></p>
-	 </div>
+    </div>
+    </div>
    <div class = "d5">
 			<p><center>
 	  			<strong></strong>
