--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet", type='text/css'>
   <title>Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -16,7 +17,7 @@
       <% if !(current_user.nil?)%>
         <p class = "p1, fr"><%= link_to 'Log out', 'users/sign_out', method: :delete %></p>
         <p class = "p1, fr"><%= current_user.email %></p>
-        <p class = "p2, fl"><%= link_to "Change password", edit_user_registration_path %></p>
+        <p class = "p2, fl"><%= link_to "Change your password", edit_user_registration_path %></p>
       <% end %>
     </div> 
 <%= yield %>
