--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,4 @@
-
-  <body><center>
+<body class = "container-fluid"><center>
 <h1>Editing article</h1>
  <%= render 'form' %>
 <%= link_to 'Home', articles_path %>
