--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 
-  <br/><body class="tb">
+  <br/><body class="tb wood container-fluid">
     <center>
     <h1>Listing articles</h1>
     <p class = "p1"><%= link_to 'New article', new_article_path %></p>
-    <table>
+    <table class = "table table-bordered">
       <tr>
         <th>Title</th>
         <th>Author</th>
@@ -33,6 +33,8 @@
         <% end %>
       <% end %>
     </table>
-   <div class = "page1"><%= will_paginate @articles %></div>
+    <div class = "row">
+      <div class = "col-sm-auto page1"><%= will_paginate @articles %></div>
+    </div>
     </center>
   </body>
