--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 
-  <body><center>
+  <body class = "container-fluid"><center>
     <h2>Add New Article</h2>
    <%= render 'form' %>  
   <%= link_to 'Home', articles_path%>
