--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
   </div>
 
 		
-		<div class = "d2 green">
+		<div id = "comment_box" class = "d2 green">
 			<h1 class = "wood">Comments :</h1>
 			<% @article.comments.each do |comment| %>
 	  			<p>
