--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   </center>
 <div class = "hidd">
   <center><div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle colr fr" type="button" data-toggle="dropdown">
+    <button class="btn btn-primary toggle colr fr" type="button" data-toggle="dropdown">
     <span class="caret"></span></button>
     <div class = "row fr">
       <% if !(current_user.nil?)%>
