--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -42,13 +42,15 @@
 	 			</p>
 			<% end %>
 		</div>
+    <div id = "messg">
+    </div>
 
 		<div class = "d3"><center>
 			<h2 class = "white">Add a comment :</h2>
 			<%= form_for([@article, @article.comments.build],remote: true) do |f| %>
 		  		<p>
 		   			<%= f.label :Comment, class: 'text_area wood' %><br>
-		    		<%= f.text_area :body, class: 'text_area wood' %>
+		    		<%= f.text_area :body, class: 'text_area wood comm_class' %>
 		  		</p>
 		  		<p>
 		    		<%= f.submit class: 'submit_btn' %>
