--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,6 +37,7 @@
 
 				<p>
 				<%= link_to 'Delete Comment', [comment.article, comment],
+                 remote: true,
 	               method: :delete,
 	               data: { confirm: 'Are you sure?' } %>
 	 			</p>
