--- a/app/assets/stylesheets/style1.scss
+++ b/app/assets/stylesheets/style1.scss
@@ -121,6 +121,12 @@ text-align: center;
 .alert{
   color:yellow;
 }
+.comp{
+  height: 200px;
+  width: 200px;
+  overflow: hidden;
+  margin: 10px;
+}
 
 @media screen and (max-width: 586px) {
     body {
