--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
       <% if @article.user_id == current_user.id %><div class = "col-sm-auto">
 			   <center><div class = "link1"><%= link_to'Edit', edit_article_path(@article) %></div></center></div>
          <div class = "col-sm-auto">
-         <center><div class = "link1"><%= link_to'Add Image', new_photo_path %></div></center></div>
+         <center><div class = "link1"><%= link_to'show Images', "/articles/#{@article.id}/photos" %></div></center></div>
 			<% end %>
 		</div>
     <br/>
@@ -60,6 +60,25 @@
 		  		</p>
 			<% end %></center>
 		</div>
+
+
+<div class="page-header"><h1>Upload Photo</h1></div>
+
+<%= form_for [@article, @article.photos.build], html: { multipart: true } do |f| %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+        <%= f.submit 'Upload Photo', class: 'btn btn-default' %>
+    </div>
+<% end %>
 
 </body>
 
